--- a/templates/layout.html
+++ b/templates/layout.html
@@ -11,53 +11,59 @@
       <script src="https://kit.fontawesome.com/b99e675b6e.js"></script>
 
      <!-- Bootstrap Code for Top Nav bar -->
-      <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
-      <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
-      <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
-      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+<!--      <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">-->
+<!--      <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>-->
+<!--      <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>-->
+<!--      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">-->
       <!-- Bootstrap Code -->
 
 
    </head>
    <body>
       <div class="wrapper">
-         <div class="sidebar">
-            <h2>Islam Pro</h2>
-            <ul>
-               <li><a href="#"><i class="fas fa-home"></i>Home</a></li>
-               <li><a href="#"><i class="fa-solid fa-gamepad"></i>  Surah Quiz</a></li>
-               <li><a href="#"><i class="fa-solid fa-person fa-xl"></i>&nbsp Prayer</a></li>
-               <li><a href="#"><i class="fa-solid fa-hands-praying"></i>  Dua's</a></li>
-               <li><a href="#"><i class="fas fa-address-book"></i>Contact</a></li>
-               <li><a href="#"><i class="fas fa-user"></i>My Account</a></li>
-               
-            </ul>
-<!--             <div class="social_media">
-               <a href="#"><i class="fab fa-facebook-f"></i></a>
-               <a href="#"><i class="fab fa-twitter"></i></a>
-               <a href="#"><i class="fab fa-instagram"></i></a>
-            </div> -->
+
+
+      <div class="sidebar">
+         <h2>Islam Pro</h2>
+         <ul>
+            <li><a href="#"><i class="fas fa-home"></i>Home</a></li>
+            <li><a href="#"><i class="fa-solid fa-gamepad"></i> Surah Quiz</a></li>
+            <li><a href="#"><i class="fa-solid fa-person fa-xl"></i>&nbsp Prayer</a></li>
+            <li><a href="#"><i class="fa-solid fa-hands-praying"></i> Dua's</a></li>
+            <li><a href="#"><i class="fas fa-address-book"></i>Contact</a></li>
+            <li><a href="#"><i class="fas fa-user"></i>My Account</a></li>
+         </ul>
+         <div class="social_media">
+            <a href="#"><i class="fab fa-facebook-f"></i></a>
+            <a href="#"><i class="fab fa-twitter"></i></a>
+            <a href="#"><i class="fab fa-instagram"></i></a>
          </div>
+      </div>
+
+
+
          <div class="section">
 
 
-<div class="top_navbar">
-         <div class="hamburger">
-            <a href="#">
-               <i class="fas fa-bars"></i>
-            </a>
-
+         <div class="top_navbar">
+            <div class="hamburger">
+               <a href="#">
+                  <i class="fas fa-bars"></i>
+               </a>
+            </div>
+            <div class="topnav">
+               <a href="#">Sign Up</a>
+               <a href="#">Login</a>
+            </div>
          </div>
 
-      </div>
-            
 
 
             <div class="info">
 
-               <h1>{% block title %}{% endblock %}</h1>
+               <h1 class="title">{% block title %}{% endblock %}</h1>
 
-               <div >{% block content %}{% endblock %}</div>
+               {% block content %} {% endblock %}
 
             </div>
          </div>
@@ -70,16 +76,6 @@
       document.querySelector("body").classList.toggle("active");
 
    })
-
-function myFunction() {
-  var x = document.getElementById("myTopnav");
-  if (x.className === "topnav") {
-    x.className += " responsive";
-  } else {
-    x.className = "topnav";
-  }
-}
-
 
 // below are for the required field in Option quiz page
 
@@ -103,11 +99,17 @@ function myFunction() {
           }
          }
 
-
-
-
-   
 </script>
 
 
 </html>
+
+
+
+
+
+
+
+
+
+
